--- a/appsettings.json
+++ b/appsettings.json
@@ -9,7 +9,6 @@
     }
   },
   "ApplicationConfigurations": {
-    "NomeSistema": "CPN",
-    "Copyright": "Jonathan Peris, todos os direitos Reservados."
+    "NomeSistema": "CPN"
   }
 }
