--- a/test/Cpnucleo.Pages.Test/Cpnucleo.Pages.Test.csproj
+++ b/test/Cpnucleo.Pages.Test/Cpnucleo.Pages.Test.csproj
@@ -7,8 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Pages\RecursoTarefa\**" />
     <Compile Remove="Repository\**" />
+    <EmbeddedResource Remove="Pages\RecursoTarefa\**" />
     <EmbeddedResource Remove="Repository\**" />
+    <None Remove="Pages\RecursoTarefa\**" />
     <None Remove="Repository\**" />
   </ItemGroup>
 
