[CHORE] Project rename

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,7 +7,7 @@
         {
             "taskName": "build",
             "args": [
-                "${workspaceRoot}/dotnet-cpnucleo-pages.csproj"
+                "${workspaceRoot}/Cpnucleo.Pages.csproj"
             ],
             "isBuildCommand": true,
             "problemMatcher": "$msCompile"
