--- a/test/Cpnucleo.Pages.Test/Cpnucleo.Pages.Test.csproj
+++ b/test/Cpnucleo.Pages.Test/Cpnucleo.Pages.Test.csproj
@@ -16,6 +16,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Mvc.RazorPages" Version="2.2.5" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.0.1" />
     <PackageReference Include="Moq" Version="4.11.0" />
+    <PackageReference Include="SparkyTestHelpers.AspNetMvc.Core" Version="2.2.1" />
+    <PackageReference Include="SparkyTestHelpers.DataAnnotations" Version="1.1.1" />
     <PackageReference Include="xunit" Version="2.4.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
   </ItemGroup>
