--- a/src/Cpnucleo.Infra.Data/Cpnucleo.Infra.Data.csproj
+++ b/src/Cpnucleo.Infra.Data/Cpnucleo.Infra.Data.csproj
@@ -21,6 +21,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Cpnucleo.Domain\Cpnucleo.Domain.csproj" />
+    <ProjectReference Include="..\Cpnucleo.Infra.CrossCutting.Configuration\Cpnucleo.Infra.CrossCutting.Configuration.csproj" />
   </ItemGroup>
 
   <ItemGroup>
