--- a/src/Cpnucleo.Application/Cpnucleo.Application.csproj
+++ b/src/Cpnucleo.Application/Cpnucleo.Application.csproj
@@ -22,7 +22,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Cpnucleo.Domain\Cpnucleo.Domain.csproj" />
-    <ProjectReference Include="..\Cpnucleo.Infra.CrossCutting.Security\Cpnucleo.Infra.CrossCutting.Security.csproj" />
+    <ProjectReference Include="..\Cpnucleo.Infra.Security\Cpnucleo.Infra.Security.csproj" />
   </ItemGroup>
 
 </Project>
