--- a/src/Cpnucleo.RazorPages.Test/Cpnucleo.RazorPages.Test.csproj
+++ b/src/Cpnucleo.RazorPages.Test/Cpnucleo.RazorPages.Test.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.RazorPages" Version="2.2.5" />
+    <PackageReference Include="Microsoft.AspNetCore.SignalR.Core" Version="1.1.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.0.1" />
     <PackageReference Include="Moq" Version="4.11.0" />
     <PackageReference Include="SparkyTestHelpers.AspNetMvc.Core" Version="2.2.1" />
