--- a/src/Cpnucleo.Infra.Security/Cpnucleo.Infra.Security.csproj
+++ b/src/Cpnucleo.Infra.Security/Cpnucleo.Infra.Security.csproj
@@ -4,4 +4,12 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.5.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Cpnucleo.Infra.CrossCutting.Util\Cpnucleo.Infra.CrossCutting.Util.csproj" />
+  </ItemGroup>
+
 </Project>
