--- a/src/Cpnucleo.RazorPages/Cpnucleo.RazorPages.csproj
+++ b/src/Cpnucleo.RazorPages/Cpnucleo.RazorPages.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
+    <PackageReference Include="MiniProfiler.AspNetCore.Mvc" Version="4.1.0" />
   </ItemGroup>
 
   <ItemGroup>
