--- a/src/Cpnucleo.Infra.CrossCutting.Communication.GRPC/Cpnucleo.Infra.CrossCutting.Communication.GRPC.csproj
+++ b/src/Cpnucleo.Infra.CrossCutting.Communication.GRPC/Cpnucleo.Infra.CrossCutting.Communication.GRPC.csproj
@@ -8,8 +8,9 @@
     <PackageReference Include="AutoMapper" Version="8.0.0" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="6.0.0" />
     
-    <PackageReference Include="Google.Protobuf" Version="3.9.1" />
+    <PackageReference Include="Grpc.Net.Client.Web" Version="2.27.0-pre1" />
     <PackageReference Include="Grpc.Net.ClientFactory" Version="2.23.2" />
+    <PackageReference Include="Google.Protobuf" Version="3.9.1" />
     <PackageReference Include="Grpc.Tools" Version="2.23.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
