--- a/src/Cpnucleo.GRPC/Properties/launchSettings.json
+++ b/src/Cpnucleo.GRPC/Properties/launchSettings.json
@@ -1,12 +1,16 @@
-﻿{
+{
   "profiles": {
     "Cpnucleo.GRPC": {
       "commandName": "Project",
-      "launchBrowser": false,
-      "applicationUrl": "https://localhost:5001",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "https://localhost:5001"
+    },
+    "Docker": {
+      "commandName": "Docker",
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
+      "publishAllPorts": true
     }
   }
 }
