--- a/src/Cpnucleo.Infra.CrossCutting.Communication.GRPC/Cpnucleo.Infra.CrossCutting.Communication.GRPC.csproj
+++ b/src/Cpnucleo.Infra.CrossCutting.Communication.GRPC/Cpnucleo.Infra.CrossCutting.Communication.GRPC.csproj
@@ -5,6 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="AutoMapper\**" />
+    <EmbeddedResource Remove="AutoMapper\**" />
+    <None Remove="AutoMapper\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="AutoMapper" Version="8.0.0" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="6.0.0" />
     
