--- a/src/Cpnucleo.Infra.CrossCutting.Communication.GRPC/Cpnucleo.Infra.CrossCutting.Communication.GRPC.csproj
+++ b/src/Cpnucleo.Infra.CrossCutting.Communication.GRPC/Cpnucleo.Infra.CrossCutting.Communication.GRPC.csproj
@@ -20,9 +20,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Protobuf Include="..\Cpnucleo.GRPC\Protos\sistema.proto" GrpcServices="Client">
-      <Link>Protos\sistema.proto</Link>
-    </Protobuf>
+    <Protobuf Include="Protos\base.proto" GrpcServices="Both" />
+    <Protobuf Include="Protos\sistema.proto" GrpcServices="Both" />
+    <Protobuf Include="Protos\projeto.proto" GrpcServices="Both" />
   </ItemGroup>
   
 </Project>
