--- a/src/Cpnucleo.Infra.CrossCutting.Communication/Cpnucleo.Infra.CrossCutting.Communication.csproj
+++ b/src/Cpnucleo.Infra.CrossCutting.Communication/Cpnucleo.Infra.CrossCutting.Communication.csproj
@@ -22,9 +22,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Protobuf Include="Protos\base.proto" GrpcServices="Both" />
-    <Protobuf Include="Protos\sistema.proto" GrpcServices="Both" />
-    <Protobuf Include="Protos\projeto.proto" GrpcServices="Both" />
+    <Protobuf Include="GRPC\Protos\base.proto" GrpcServices="Both" />
+    <Protobuf Include="GRPC\Protos\sistema.proto" GrpcServices="Both" />
+    <Protobuf Include="GRPC\Protos\projeto.proto" GrpcServices="Both" />
   </ItemGroup>
 
 </Project>
