--- a/src/Cpnucleo.GRPC/Dockerfile
+++ b/src/Cpnucleo.GRPC/Dockerfile
@@ -13,7 +13,7 @@ COPY ["src/Cpnucleo.GRPC/Cpnucleo.GRPC.csproj", "src/Cpnucleo.GRPC/"]
 COPY ["src/Cpnucleo.Application/Cpnucleo.Application.csproj", "src/Cpnucleo.Application/"]
 COPY ["src/Cpnucleo.Domain/Cpnucleo.Domain.csproj", "src/Cpnucleo.Domain/"]
 COPY ["src/Cpnucleo.Infra.CrossCutting.Util/Cpnucleo.Infra.CrossCutting.Util.csproj", "src/Cpnucleo.Infra.CrossCutting.Util/"]
-COPY ["src/Cpnucleo.Infra.Security/Cpnucleo.Infra.Security.csproj", "src/Cpnucleo.Infra.Security/"]
+COPY ["src/Cpnucleo.Infra.CrossCutting.Security/Cpnucleo.Infra.CrossCutting.Security.csproj", "src/Cpnucleo.Infra.CrossCutting.Security/"]
 COPY ["src/Cpnucleo.Infra.CrossCutting.IoC/Cpnucleo.Infra.CrossCutting.IoC.csproj", "src/Cpnucleo.Infra.CrossCutting.IoC/"]
 COPY ["src/Cpnucleo.Infra.CrossCutting.Communication/Cpnucleo.Infra.CrossCutting.Communication.csproj", "src/Cpnucleo.Infra.CrossCutting.Communication/"]
 COPY ["src/Cpnucleo.Infra.CrossCutting.Identity/Cpnucleo.Infra.CrossCutting.Identity.csproj", "src/Cpnucleo.Infra.CrossCutting.Identity/"]
