[FEAT] Atualização nas práticas de GRPC

--- a/src/Cpnucleo.RazorPages.GRPC/appsettings.json
+++ b/src/Cpnucleo.RazorPages.GRPC/appsettings.json
@@ -5,7 +5,7 @@
     }
   },
   "AppSettings": {
-    "UrlCpnucleoApi": "https://cpnucleo-api.azurewebsites.net"
+    "UrlCpnucleoGrpc": "https://localhost:5021"
   },
   "ApplicationConfigurations": {
     "NomeSistema": "CPN"
