--- a/src/Cpnucleo.GRPC/Cpnucleo.GRPC.csproj
+++ b/src/Cpnucleo.GRPC/Cpnucleo.GRPC.csproj
@@ -9,8 +9,8 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="8.0.0" />
-    <PackageReference Include="Grpc.AspNetCore" Version="2.27.0" />    
-    <PackageReference Include="Grpc.AspNetCore.Web" Version="2.27.0-pre1" />    
+    <PackageReference Include="Grpc.AspNetCore" Version="2.28.0-pre2" />    
+    <PackageReference Include="Grpc.AspNetCore.Web" Version="2.28.0-pre2" />    
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.9.10" />
   </ItemGroup>
 
