--- a/src/Cpnucleo.Infra.CrossCutting.Communication/Cpnucleo.Infra.CrossCutting.Communication.csproj
+++ b/src/Cpnucleo.Infra.CrossCutting.Communication/Cpnucleo.Infra.CrossCutting.Communication.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="RestSharp" Version="106.10.1" />
     <PackageReference Include="AutoMapper" Version="8.0.0" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="6.0.0" />
     <PackageReference Include="Grpc.Net.Client.Web" Version="2.27.0-pre1" />
     <PackageReference Include="Grpc.Net.ClientFactory" Version="2.27.0" />
     <PackageReference Include="Google.Protobuf" Version="3.11.4" />
