--- a/src/Cpnucleo.RazorPages.GRPC/appsettings.Development.json
+++ b/src/Cpnucleo.RazorPages.GRPC/appsettings.Development.json
@@ -7,7 +7,7 @@
     }
   },
   "AppSettings": {
-    "UrlCpnucleoApi": "https://localhost:5011"
+    "UrlCpnucleoGrpc": "https://localhost:5021"
   },
   "ApplicationConfigurations": {
     "NomeSistema": "CPN"
