--- a/src/Cpnucleo.Infra.CrossCutting.Communication/Cpnucleo.Infra.CrossCutting.Communication.csproj
+++ b/src/Cpnucleo.Infra.CrossCutting.Communication/Cpnucleo.Infra.CrossCutting.Communication.csproj
@@ -19,7 +19,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Cpnucleo.Infra.CrossCutting.Util\Cpnucleo.Infra.CrossCutting.Util.csproj" />
+    <ProjectReference Include="..\Cpnucleo.Infra.CrossCutting.Util\Cpnucleo.Infra.CrossCutting.Util.csproj">
+      <PrivateAssets>all</PrivateAssets>
+    </ProjectReference>
   </ItemGroup>
 
   <ItemGroup>
