--- a/src/Cpnucleo.Infra.Data/Cpnucleo.Infra.Data.csproj
+++ b/src/Cpnucleo.Infra.Data/Cpnucleo.Infra.Data.csproj
@@ -19,8 +19,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Cpnucleo.Domain\Cpnucleo.Domain.csproj" />
-    <ProjectReference Include="..\Cpnucleo.Infra.CrossCutting.Util\Cpnucleo.Infra.CrossCutting.Util.csproj" />
+    <ProjectReference Include="..\Cpnucleo.Domain\Cpnucleo.Domain.csproj">
+      <PrivateAssets>all</PrivateAssets>
+    </ProjectReference>
+    <ProjectReference Include="..\Cpnucleo.Infra.CrossCutting.Util\Cpnucleo.Infra.CrossCutting.Util.csproj">
+      <PrivateAssets>all</PrivateAssets>
+    </ProjectReference>
   </ItemGroup>
 
 </Project>
