--- a/src/Cpnucleo.RazorPages/Cpnucleo.RazorPages.csproj
+++ b/src/Cpnucleo.RazorPages/Cpnucleo.RazorPages.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Cpnucleo.Infra.CrossCutting.Communication\Cpnucleo.Infra.CrossCutting.Communication.csproj" />
+    <ProjectReference Include="..\Cpnucleo.Infra.CrossCutting.Identity\Cpnucleo.Infra.CrossCutting.Identity.csproj" />
     <ProjectReference Include="..\Cpnucleo.Infra.CrossCutting.IoC\Cpnucleo.Infra.CrossCutting.IoC.csproj" />
     <ProjectReference Include="..\Cpnucleo.Infra.CrossCutting.Util\Cpnucleo.Infra.CrossCutting.Util.csproj" />
   </ItemGroup>
