[FEAT] Alteração no modo de autenticação

--- a/src/Cpnucleo.RazorPages/appsettings.Development.json
+++ b/src/Cpnucleo.RazorPages/appsettings.Development.json
@@ -6,6 +6,9 @@
       "Microsoft": "Information"
     }
   },
+  "Cookie": {
+    "Expires": "720" //MINUTES
+  },
   "AppSettings": {
     "UrlCpnucleoApi": "https://localhost:5011"
   },
