--- a/src/Cpnucleo.RazorPages/appsettings.json
+++ b/src/Cpnucleo.RazorPages/appsettings.json
@@ -4,6 +4,9 @@
       "Default": "Warning"
     }
   },
+  "Cookie": {
+    "Expires": "720"
+  },
   "AppSettings": {
     "UrlCpnucleoApi": "https://cpnucleo-api.azurewebsites.net"
   },
