--- a/src/Cpnucleo.API/appsettings.Development.json
+++ b/src/Cpnucleo.API/appsettings.Development.json
@@ -8,7 +8,7 @@
   },
   "Jwt": {
     "Key": "fedaf7d8863b48e197b9287d492b708e",
-    "Expires": "1",
+    "Expires": "43200", //SECONDS
     "Issuer": "https://localhost:5011"
   }
 }
