[CHORE] Ajustes para desenvolvimento linux

--- a/src/Cpnucleo.API/appsettings.Development.json
+++ b/src/Cpnucleo.API/appsettings.Development.json
@@ -9,6 +9,6 @@
   "Jwt": {
     "Key": "fedaf7d8863b48e197b9287d492b708e",
     "Expires": "43200", //SECONDS
-    "Issuer": "https://localhost:5011"
+    "Issuer": "http://localhost:5010"
   }
 }
