--- a/src/Cpnucleo.RazorPages/appsettings.Development.json
+++ b/src/Cpnucleo.RazorPages/appsettings.Development.json
@@ -10,7 +10,7 @@
     "Expires": "720" //MINUTES
   },
   "AppSettings": {
-    "UrlCpnucleoApi": "https://localhost:5011"
+    "UrlCpnucleoApi": "http://localhost:5010"
   },
   "ApplicationConfigurations": {
     "NomeSistema": "CPN"
