--- a/src/Cpnucleo.API/Properties/launchSettings.json
+++ b/src/Cpnucleo.API/Properties/launchSettings.json
@@ -5,7 +5,7 @@
       "commandName": "Project",
       "launchBrowser": false,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:5011;http://localhost:5010",
+      "applicationUrl": "http://localhost:5010;https://localhost:5011",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
