--- a/src/Cpnucleo.API/Cpnucleo.API.csproj
+++ b/src/Cpnucleo.API/Cpnucleo.API.csproj
@@ -1,24 +1,11 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
     <UserSecretsId>47bd8656-a13b-4536-b2b0-56991710daa1</UserSecretsId>
   </PropertyGroup>
-  <ItemGroup>
-    <Compile Remove="Controllers\V1\ApontamentoController.cs" />
-    <Compile Remove="Controllers\V1\AuthController.cs" />
-    <Compile Remove="Controllers\V1\ImpedimentoController.cs" />
-    <Compile Remove="Controllers\V1\ImpedimentoTarefaController.cs" />
-    <Compile Remove="Controllers\V1\ProjetoController.cs" />
-    <Compile Remove="Controllers\V1\RecursoController.cs" />
-    <Compile Remove="Controllers\V1\RecursoProjetoController.cs" />
-    <Compile Remove="Controllers\V1\RecursoTarefaController.cs" />
-    <Compile Remove="Controllers\V1\SistemaController.cs" />
-    <Compile Remove="Controllers\V1\TarefaController.cs" />
-    <Compile Remove="Controllers\V1\TipoTarefaController.cs" />
-    <Compile Remove="Controllers\V1\WorkflowController.cs" />
-  </ItemGroup>
+
   <ItemGroup>
     <PackageReference Include="DocumentFormat.OpenXml" Version="2.10.1" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.3" />
@@ -27,17 +14,17 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.3.1" />
   </ItemGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\Cpnucleo.Application\Cpnucleo.Application.csproj" />
     <ProjectReference Include="..\Cpnucleo.Infra.CrossCutting.IoC\Cpnucleo.Infra.CrossCutting.IoC.csproj" />
     <ProjectReference Include="..\Cpnucleo.Infra.CrossCutting.Security\Cpnucleo.Infra.CrossCutting.Security.csproj" />
     <ProjectReference Include="..\Cpnucleo.Infra.CrossCutting.Util\Cpnucleo.Infra.CrossCutting.Util.csproj" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Controllers\V1\" />
-  </ItemGroup>
+
   <PropertyGroup>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <NoWarn>$(NoWarn);1591</NoWarn>
   </PropertyGroup>
+  
 </Project>
