--- a/src/Cpnucleo.RazorPages/Cpnucleo.RazorPages.csproj
+++ b/src/Cpnucleo.RazorPages/Cpnucleo.RazorPages.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="RestSharp" Version="106.10.1" />
     <PackageReference Include="MiniProfiler.AspNetCore.Mvc" Version="4.1.0" />
   </ItemGroup>
 
