--- a/src/Cpnucleo.API/appsettings.json
+++ b/src/Cpnucleo.API/appsettings.json
@@ -7,7 +7,7 @@
   "Jwt": {
     "Key": "fedaf7d8863b48e197b9287d492b708e",
     "Expires": "43200",
-    "Issuer": "https://cpnucleo-api.azurewebsites.net"
+    "Issuer": "https://api-cpnucleo.azurewebsites.net"
   },
   "AllowedHosts": "*"
 }
