--- a/src/Cpnucleo.RazorPages/appsettings.json
+++ b/src/Cpnucleo.RazorPages/appsettings.json
@@ -8,7 +8,7 @@
     "Expires": "720"
   },
   "AppSettings": {
-    "UrlCpnucleoApi": "https://cpnucleo-api.azurewebsites.net"
+    "UrlCpnucleoApi": "https://api-cpnucleo.azurewebsites.net"
   },
   "ApplicationConfigurations": {
     "NomeSistema": "CPN"
