--- a/src/Cpnucleo.RazorPages/appsettings.Development.json
+++ b/src/Cpnucleo.RazorPages/appsettings.Development.json
@@ -7,7 +7,7 @@
     }
   },
   "Cookie": {
-    "Expires": "720" //MINUTES
+    "Expires": "720"
   },
   "AppSettings": {
     "UrlCpnucleoApi": "http://localhost:5010"
