--- a/src/Cpnucleo.API/appsettings.Development.json
+++ b/src/Cpnucleo.API/appsettings.Development.json
@@ -8,7 +8,7 @@
   },
   "Jwt": {
     "Key": "fedaf7d8863b48e197b9287d492b708e",
-    "Expires": "43200", //SECONDS
+    "Expires": "43200",
     "Issuer": "http://localhost:5010"
   }
 }
