--- a/src/Cpnucleo.RazorPages/appsettings.Development.json
+++ b/src/Cpnucleo.RazorPages/appsettings.Development.json
@@ -10,7 +10,7 @@
     "Expires": "720"
   },
   "AppSettings": {
-    "UrlCpnucleoApi": "http://localhost:5010"
+    "UrlCpnucleoApi": "https://api-cpnucleo.azurewebsites.net"
   },
   "ApplicationConfigurations": {
     "NomeSistema": "CPN"
