[CHORE] Ajuste nos arquivos de debug para .NET 5

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "build",
-            "program": "${workspaceFolder}/src/Cpnucleo.API/bin/Debug/netcoreapp3.1/Cpnucleo.API.dll",
+            "program": "${workspaceFolder}/src/Cpnucleo.API/bin/Debug/net5.0/Cpnucleo.API.dll",
             "args": [],
             "cwd": "${workspaceFolder}/src/Cpnucleo.API",
             "stopAtEntry": false,
@@ -29,7 +29,7 @@
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "build",
-            "program": "${workspaceFolder}/src/Cpnucleo.RazorPages/bin/Debug/netcoreapp3.1/Cpnucleo.RazorPages.dll",
+            "program": "${workspaceFolder}/src/Cpnucleo.RazorPages/bin/Debug/net5.0/Cpnucleo.RazorPages.dll",
             "args": [],
             "cwd": "${workspaceFolder}/src/Cpnucleo.RazorPages",
             "stopAtEntry": false,
