--- a/src/Cpnucleo.API/.vscode/launch.json
+++ b/src/Cpnucleo.API/.vscode/launch.json
@@ -10,7 +10,7 @@
             "request": "launch",
             "preLaunchTask": "build",
             // If you have changed target frameworks, make sure to update the program path.
-            "program": "${workspaceFolder}/bin/Debug/netcoreapp3.1/Cpnucleo.API.dll",
+            "program": "${workspaceFolder}/bin/Debug/net5.0/Cpnucleo.API.dll",
             "args": [],
             "cwd": "${workspaceFolder}",
             "stopAtEntry": false,
