[FEAT] Refactor de chamadas HTTP para uso do Refit

--- a/src/Cpnucleo.RazorPages/Cpnucleo.RazorPages.csproj
+++ b/src/Cpnucleo.RazorPages/Cpnucleo.RazorPages.csproj
@@ -6,6 +6,8 @@
 
   <ItemGroup>
     <PackageReference Include="MiniProfiler.AspNetCore.Mvc" Version="4.2.22" />
+    <PackageReference Include="Refit" Version="6.0.15" />
+    <PackageReference Include="Refit.HttpClientFactory" Version="6.0.15" />
   </ItemGroup>
 
 </Project>
