--- a/src/Cpnucleo.RazorPages/Cpnucleo.RazorPages.csproj
+++ b/src/Cpnucleo.RazorPages/Cpnucleo.RazorPages.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Refit.HttpClientFactory" Version="6.0.15" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Cpnucleo.Infra.CrossCutting.Util\Cpnucleo.Infra.CrossCutting.Util.csproj" />
+  </ItemGroup>
+
 </Project>
