--- a/src/Cpnucleo.API/Properties/launchSettings.json
+++ b/src/Cpnucleo.API/Properties/launchSettings.json
@@ -1,7 +1,7 @@
 ﻿{
   "$schema": "http://json.schemastore.org/launchsettings.json",
   "profiles": {
-    "Cpnucleo.Services": {
+    "Cpnucleo.API": {
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "swagger",
