--- a/src/Cpnucleo.Application/Cpnucleo.Application.csproj
+++ b/src/Cpnucleo.Application/Cpnucleo.Application.csproj
@@ -12,6 +12,12 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Cpnucleo.Infra.CrossCutting.Security\Cpnucleo.Infra.CrossCutting.Security.csproj" />
+    <ProjectReference Include="..\Cpnucleo.Infra.CrossCutting.Util\Cpnucleo.Infra.CrossCutting.Util.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="AutoMapper\" />
+    <Folder Include="Services\" />
   </ItemGroup>
 
 </Project>
