--- a/directory.packages.props
+++ b/directory.packages.props
@@ -8,6 +8,8 @@
       <PackageVersion Include="Microsoft.AspNetCore.Mvc.Versioning" Version="5.0.0-preview.2" />
       <PackageVersion Include="Microsoft.AspNetCore.Mvc.Versioning.ApiExplorer" Version="5.0.0-preview.2" />
       <PackageVersion Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.1" />
+      <PackageVersion Include="AutoMapper" Version="10.1.1" />
+      <PackageVersion Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
       <PackageVersion Include="Swashbuckle.AspNetCore" Version="5.6.3" />
       <PackageVersion Include="MediatR" Version="9.0.0" />
       <PackageVersion Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
