--- a/src/Cpnucleo.MVC/Cpnucleo.MVC.csproj
+++ b/src/Cpnucleo.MVC/Cpnucleo.MVC.csproj
@@ -7,11 +7,8 @@
 
   <ItemGroup>
     <PackageReference Include="Grpc.Net.Client" Version="2.37.0" />
-    <PackageReference Include="Grpc.Net.Client.Web" Version="2.37.0" />
-    <PackageReference Include="protobuf-net.Grpc" Version="1.0.152" />
+    <PackageReference Include="MagicOnion.Client" Version="4.3.1" />
     <PackageReference Include="MiniProfiler.AspNetCore.Mvc" Version="4.2.22" />
-    <PackageReference Include="AutoMapper" Version="10.1.1" />
-    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
   </ItemGroup>  
 
   <ItemGroup>
