Update azure-pipelines.yml for Azure Pipelines

--- a/src/Cpnucleo.GRPC/azure-pipelines.yml
+++ b/src/Cpnucleo.GRPC/azure-pipelines.yml
@@ -16,6 +16,7 @@ name: $(date:yyyyMMdd)$(rev:.r)
 steps:
 
 - task: UseDotNet@2
+  displayName: Define .NET Version
   inputs:
     version: '5.0.x'
 
