Modificado os pipelines para buscar a versao de compilação do global.json

--- a/src/Cpnucleo.API/azure-pipelines.yml
+++ b/src/Cpnucleo.API/azure-pipelines.yml
@@ -18,7 +18,8 @@ steps:
 - task: UseDotNet@2
   displayName: Install .NET SDK
   inputs:
-    version: '5.0.x'
+    useGlobalJson: true
+    includePreviewVersions: true
 
 - task: DotNetCoreCLI@2
   displayName: Restore
