--- a/src/Cpnucleo.GRPC/Cpnucleo.GRPC.csproj
+++ b/src/Cpnucleo.GRPC/Cpnucleo.GRPC.csproj
@@ -5,6 +5,8 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>annotations</Nullable>
 		<UserSecretsId>667fd26c-d449-4a3d-b7cd-bf2e859c27ab</UserSecretsId>
+		<DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+		<DockerfileContext>..\..</DockerfileContext>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -12,6 +14,7 @@
 		<PackageReference Include="Grpc.AspNetCore.Web" Version="2.39.0" />
 		<PackageReference Include="MagicOnion.Server" Version="4.3.1" />
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.10" />
+		<PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.14.0" />
 	</ItemGroup>
 
 	<ItemGroup>
