--- a/src/Cpnucleo.GRPC/Properties/launchSettings.json
+++ b/src/Cpnucleo.GRPC/Properties/launchSettings.json
@@ -7,6 +7,12 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "applicationUrl": "https://localhost:5021"
+    },
+    "Docker": {
+      "commandName": "Docker",
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
+      "publishAllPorts": true,
+      "useSSL": true
     }
   }
 }
