--- a/src/Cpnucleo.MVC/Cpnucleo.MVC.csproj
+++ b/src/Cpnucleo.MVC/Cpnucleo.MVC.csproj
@@ -5,12 +5,15 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>annotations</Nullable>
 		<UserSecretsId>d29f096d-1898-4202-a388-4d46b6a15293</UserSecretsId>
+		<DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+		<DockerfileContext>..\..</DockerfileContext>
 	</PropertyGroup>
 
 	<ItemGroup>
 		<PackageReference Include="Grpc.Net.Client" Version="2.39.0" />
 		<PackageReference Include="Grpc.Net.Client.Web" Version="2.39.0" />
 		<PackageReference Include="MagicOnion.Client" Version="4.3.1" />
+		<PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.14.0" />
 		<PackageReference Include="MiniProfiler.AspNetCore.Mvc" Version="4.2.22" />
 	</ItemGroup>
 
