--- a/src/Cpnucleo.MVC/Properties/launchSettings.json
+++ b/src/Cpnucleo.MVC/Properties/launchSettings.json
@@ -1,13 +1,21 @@
-﻿{
+{
+  "$schema": "http://json.schemastore.org/launchsettings.json",
   "profiles": {
     "Cpnucleo.MVC": {
       "commandName": "Project",
-      "dotnetRunMessages": "true",
       "launchBrowser": true,
-      "applicationUrl": "http://localhost:5030;https://localhost:5031",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "http://localhost:5030;https://localhost:5031",
+      "dotnetRunMessages": "true"
+    },
+    "Docker": {
+      "commandName": "Docker",
+      "launchBrowser": true,
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
+      "publishAllPorts": true,
+      "useSSL": true
     }
   }
 }
