--- a/src/Cpnucleo.RazorPages/Cpnucleo.RazorPages.csproj
+++ b/src/Cpnucleo.RazorPages/Cpnucleo.RazorPages.csproj
@@ -3,7 +3,7 @@
 	<PropertyGroup>
 		<TargetFramework>net6.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
-		<Nullable>annotations</Nullable>
+		<Nullable>disable</Nullable>
 		<UserSecretsId>ad23b12b-1357-478e-b2eb-0043aa8247d1</UserSecretsId>
 		<DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
 		<DockerfileContext>..\..</DockerfileContext>
