CORS na API do CPN

--- a/src/Cpnucleo.API/appsettings.json
+++ b/src/Cpnucleo.API/appsettings.json
@@ -9,5 +9,8 @@
     "Expires": "43200",
     "Issuer": "https://api-cpnucleo.azurewebsites.net"
   },
+  "AppSettings": {
+    "UrlCpnucleoBlazor": "https://cpnucleo-blazor.azurewebsites.net/"
+  },
   "AllowedHosts": "*"
 }
