--- a/src/Cpnucleo.API/appsettings.Development.json
+++ b/src/Cpnucleo.API/appsettings.Development.json
@@ -10,5 +10,8 @@
     "Key": "fedaf7d8863b48e197b9287d492b708e",
     "Expires": "43200",
     "Issuer": "http://localhost:5010"
+  },
+  "AppSettings": {
+    "UrlCpnucleoBlazor": "https://localhost:5041"
   }
 }
