--- a/src/Cpnucleo.API/appsettings.json
+++ b/src/Cpnucleo.API/appsettings.json
@@ -10,7 +10,7 @@
     "Issuer": "https://api-cpnucleo.azurewebsites.net"
   },
   "AppSettings": {
-    "UrlCpnucleoBlazor": "https://cpnucleo-blazor.azurewebsites.net/"
+    "UrlCpnucleoBlazor": "https://cpnucleo-blazor.azurewebsites.net"
   },
   "AllowedHosts": "*"
 }
