Alterações no projeto blazor

--- a/src/Cpnucleo.Blazor/Cpnucleo.Blazor.csproj
+++ b/src/Cpnucleo.Blazor/Cpnucleo.Blazor.csproj
@@ -13,4 +13,8 @@
 		<PackageReference Include="Refit.HttpClientFactory" Version="6.1.15" />
 	</ItemGroup>
 
+	<ItemGroup>
+		<ProjectReference Include="..\Cpnucleo.Infra.CrossCutting.Util\Cpnucleo.Infra.CrossCutting.Util.csproj" />
+	</ItemGroup>	
+
 </Project>
