--- a/src/Cpnucleo.Blazor/azure-pipelines.yml
+++ b/src/Cpnucleo.Blazor/azure-pipelines.yml
@@ -24,7 +24,8 @@ steps:
 - task: DotNetCoreCLI@2
   displayName: Install WASM tools
   inputs:
-    command: 'workload install wasm-tools'
+    command: 'workload'
+    arguments: 'install wasm-tools'
     projects: '$(project)'
 
 - task: DotNetCoreCLI@2
