--- a/src/Cpnucleo.MVC/appsettings.Development.json
+++ b/src/Cpnucleo.MVC/appsettings.Development.json
@@ -10,6 +10,7 @@
     "Expires": "720"
   },
   "AppSettings": {
+    "UrlCpnucleoApiAuth": "https://localhost:7193",
     "UrlCpnucleoGrpcApontamento": "https://localhost:7035",
     "UrlCpnucleoGrpcImpedimento": "https://localhost:7000",
     "UrlCpnucleoGrpcImpedimentoTarefa": "https://localhost:7073",
