--- a/src/Cpnucleo.MVC/appsettings.json
+++ b/src/Cpnucleo.MVC/appsettings.json
@@ -10,6 +10,7 @@
     "Expires": "720"
   },
   "AppSettings": {
+    "UrlCpnucleoApiAuth": "https://api-cpnucleo-auth.azurewebsites.net",
     "UrlCpnucleoGrpcApontamento": "https://grpc-cpnucleo-apontamento.azurewebsites.net",
     "UrlCpnucleoGrpcImpedimento": "https://grpc-cpnucleo-impedimento.azurewebsites.net",
     "UrlCpnucleoGrpcImpedimentoTarefa": "https://grpc-cpnucleo-impedimento-tarefa.azurewebsites.net",
